--- a/static/css/index.css
+++ b/static/css/index.css
@@ -58,3 +58,11 @@
 .winning-circle{
     background-color: white;
 }
+#settings{
+    display: flex;
+    flex-direction: row;
+    border:2px solid black;
+}
+.hidden{
+    display: none;
+}
